--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Bị bẹ dừa rơi trúng mắt rung rinh thủy tinh thể",
+    "content": "Một người đàn ông 77 tuổi ở Bến Tre đã bị bẹ dừa rơi trúng mắt, dẫn đến tình trạng rung rinh thủy tinh thể và mất khả năng nhìn. Các bác sĩ tại Bệnh viện Mắt Sông Tiền đã tiến hành phẫu thuật khẩn cấp để bảo tồn thị lực cho bệnh nhân. Sau phẫu thuật, thị lực của bệnh nhân đã dần phục hồi. Bác sĩ khuyến cáo rằng việc khám mắt định kỳ và can thiệp sớm là rất quan trọng để ngăn ngừa các tổn thương nghiêm trọng hơn.",
+    "link": "https://vnexpress.net/bi-be-dua-roi-trung-mat-rung-rinh-thuy-tinh-the-4863265.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Nguyên nhân nào khiến người đàn ông 77 tuổi mất khả năng nhìn?",
+    "answers": [
+      {
+        "text": "Bị bẹ dừa rơi trúng mắt",
+        "correct": true
+      },
+      {
+        "text": "Bị ngã khi làm vườn",
+        "correct": false
+      },
+      {
+        "text": "Bị cát bay vào mắt",
+        "correct": false
+      },
+      {
+        "text": "Bị bệnh lý cườm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xác minh clip tài xế xe công nghệ đánh nhau với bảo vệ nhà ga metro số 1",
     "content": "Clip lan truyền trên mạng xã hội ghi lại cảnh một tài xế xe ôm công nghệ và bảo vệ nhà ga metro số 1 (Thủ Đức) đánh nhau. Sự việc xảy ra khi bảo vệ nhắc nhở tài xế không được hút thuốc trong khu vực nhà ga, dẫn đến tranh cãi và xô xát. Công an phường Bình Thọ đã vào cuộc xác minh vụ việc và mời các bên liên quan làm việc.",
     "link": "https://tuoitre.vn/xac-minh-clip-tai-xe-xe-cong-nghe-danh-nhau-voi-bao-ve-nha-ga-metro-so-1-20250322144808356.htm",
@@ -2370,33 +2397,6 @@
     ]
   },
   {
-    "title": "Đo mật độ xương bằng AI trong 30s",
-    "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
-    "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ứng dụng AI vào đo mật độ xương có lợi ích gì?",
-    "answers": [
-      {
-        "text": "Giúp giảm thời gian đo xuống 30 giây và tăng độ chính xác.",
-        "correct": true
-      },
-      {
-        "text": "Giúp bác sĩ làm việc ít hơn.",
-        "correct": false
-      },
-      {
-        "text": "Giúp bệnh nhân không phải đến bệnh viện.",
-        "correct": false
-      },
-      {
-        "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
     "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
     "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
@@ -2424,59 +2424,55 @@
     ]
   },
   {
-    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
-    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
-    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
-    "cat": "thoi-su",
-    "positivity": 2,
+    "title": "Đo mật độ xương bằng AI trong 30s",
+    "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
+    "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
     "importance": 8,
-    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
+    "question": "Ứng dụng AI vào đo mật độ xương có lợi ích gì?",
     "answers": [
       {
-        "text": "Do khô hạn khiến lúa chết",
+        "text": "Giúp giảm thời gian đo xuống 30 giây và tăng độ chính xác.",
         "correct": true
       },
       {
-        "text": "Vì lúa bị sâu bệnh",
+        "text": "Giúp bác sĩ làm việc ít hơn.",
         "correct": false
       },
       {
-        "text": "Do thời tiết quá lạnh",
+        "text": "Giúp bệnh nhân không phải đến bệnh viện.",
         "correct": false
       },
       {
-        "text": "Vì không có giống lúa tốt",
+        "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
         "correct": false
       }
     ]
   },
   {
-    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
-    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
-    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
+    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
+    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
+    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
     "answers": [
       {
-        "text": "Nấu ăn và khiêu vũ cùng người lạ",
+        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
         "correct": true
       },
       {
-        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
+        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
         "correct": false
       },
       {
-        "text": "Chỉ dành cho những người đã quen biết nhau",
+        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
         "correct": false
       },
       {
-        "text": "Tổ chức các buổi hội thảo chuyên đề",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho những người lớn tuổi",
+        "text": "Vì chỉ những người tài năng mới thành công.",
         "correct": false
       }
     ]
@@ -2513,28 +2509,59 @@
     ]
   },
   {
-    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
-    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
-    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
+    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
+    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
+    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
     "answers": [
       {
-        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
+        "text": "Nấu ăn và khiêu vũ cùng người lạ",
         "correct": true
       },
       {
-        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
+        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
         "correct": false
       },
       {
-        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
+        "text": "Chỉ dành cho những người đã quen biết nhau",
         "correct": false
       },
       {
-        "text": "Vì chỉ những người tài năng mới thành công.",
+        "text": "Tổ chức các buổi hội thảo chuyên đề",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho những người lớn tuổi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
+    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
+    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
+    "answers": [
+      {
+        "text": "Do khô hạn khiến lúa chết",
+        "correct": true
+      },
+      {
+        "text": "Vì lúa bị sâu bệnh",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết quá lạnh",
+        "correct": false
+      },
+      {
+        "text": "Vì không có giống lúa tốt",
         "correct": false
       }
     ]
@@ -3553,6 +3580,33 @@
     ]
   },
   {
+    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
+    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
+    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
+    "answers": [
+      {
+        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì Modric không thích cách chơi của Mbappe.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric không hài lòng với trọng tài.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cầu Ba Son rực rỡ nối các đô thị hiện đại hai bờ sông Sài Gòn",
     "content": "Cầu Ba Son, còn được gọi là cầu Thủ Thiêm 2, đã hoàn thành hệ thống chiếu sáng mỹ thuật vào đầu năm 2025, tạo nên một biểu tượng mới cho TP.HCM. Cầu không chỉ kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm mà còn là điểm nhấn trong không gian đô thị ven sông Sài Gòn, thu hút du khách và người dân. Hệ thống chiếu sáng hiện đại giúp cầu trở nên lung linh vào ban đêm và có khả năng thay đổi màu sắc theo các sự kiện đặc biệt, góp phần nâng cao trải nghiệm tham quan của người dân và du khách.",
     "link": "https://tuoitre.vn/cau-ba-son-ruc-ro-noi-cac-do-thi-hien-dai-hai-bo-song-sai-gon-20250320164603305.htm",
@@ -3602,33 +3656,6 @@
       },
       {
         "text": "Vì không muốn gây tranh cãi trong quần vợt.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
-    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
-    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
-    "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
-    "answers": [
-      {
-        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì Modric không thích cách chơi của Mbappe.",
-        "correct": false
-      },
-      {
-        "text": "Vì Modric không hài lòng với trọng tài.",
-        "correct": false
-      },
-      {
-        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
         "correct": false
       }
     ]
@@ -3997,33 +4024,6 @@
     ]
   },
   {
-    "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
-    "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
-    "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Phụ nữ tiền mãn kinh nên ăn gì để cân bằng nội tiết tố?",
-    "answers": [
-      {
-        "text": "Thực phẩm giàu phytoestrogen như hạt lanh và đậu nành",
-        "correct": true
-      },
-      {
-        "text": "Thịt đỏ và đồ chiên",
-        "correct": false
-      },
-      {
-        "text": "Đồ uống có ga",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chế biến sẵn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
     "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
     "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
@@ -4046,6 +4046,33 @@
       },
       {
         "text": "Không cần hóa trị nếu không có triệu chứng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
+    "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
+    "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Phụ nữ tiền mãn kinh nên ăn gì để cân bằng nội tiết tố?",
+    "answers": [
+      {
+        "text": "Thực phẩm giàu phytoestrogen như hạt lanh và đậu nành",
+        "correct": true
+      },
+      {
+        "text": "Thịt đỏ và đồ chiên",
+        "correct": false
+      },
+      {
+        "text": "Đồ uống có ga",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chế biến sẵn",
         "correct": false
       }
     ]
