--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "8 dấu hiệu khoa học của một ngôi nhà tốt",
+    "content": "Bài viết nêu rõ 8 dấu hiệu khoa học cho thấy một ngôi nhà tốt có thể mang lại tài lộc và hạnh phúc cho gia chủ. Những dấu hiệu này bao gồm cửa chính sạch sẽ, cây cối trong nhà phát triển tốt, sự xuất hiện của chim và ong, thú cưng khỏe mạnh, không có mùi lạ, giấc ngủ ngon, và cảm giác thuận lợi khi chuyển vào nhà mới. Những yếu tố này không chỉ cải thiện chất lượng cuộc sống mà còn phản ánh sự chăm sóc của gia chủ đối với không gian sống.",
+    "link": "https://vnexpress.net/8-dau-hieu-khoa-hoc-cua-mot-ngoi-nha-tot-4864396.html",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Ngôi nhà nào được coi là tốt theo 8 dấu hiệu khoa học?",
+    "answers": [
+      {
+        "text": "Có cửa chính sạch sẽ và gọn gàng",
+        "correct": true
+      },
+      {
+        "text": "Có nhiều đồ đạc lộn xộn",
+        "correct": false
+      },
+      {
+        "text": "Có mùi hôi khó chịu",
+        "correct": false
+      },
+      {
+        "text": "Có cây cối khô héo",
+        "correct": false
+      },
+      {
+        "text": "Không có thú cưng trong nhà",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nhiều giáo viên dạy miễn phí, hỗ trợ ngoài giờ cho học sinh ôn thi cuối cấp",
     "content": "Tại Nghệ An, nhiều giáo viên đã tình nguyện mở lớp ôn thi miễn phí cho học sinh chuẩn bị cho kỳ thi vào lớp 10 và tốt nghiệp THPT. Các lớp học diễn ra ngoài giờ học chính thức, giúp học sinh làm quen với cấu trúc đề thi mới. Sở Giáo dục và Đào tạo Nghệ An cũng đã hỗ trợ các trường trong việc xây dựng kế hoạch ôn tập chất lượng cho học sinh cuối cấp.",
     "link": "https://dantri.com.vn/giao-duc/nhieu-giao-vien-day-mien-phi-ho-tro-ngoai-gio-cho-hoc-sinh-on-thi-cuoi-cap-20250322133758452.htm",
@@ -1431,6 +1462,33 @@
     ]
   },
   {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -1457,33 +1515,6 @@
       },
       {
         "text": "3 tháng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -2459,6 +2490,60 @@
     ]
   },
   {
+    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
+    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
+    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
+    "answers": [
+      {
+        "text": "Do khô hạn khiến lúa chết",
+        "correct": true
+      },
+      {
+        "text": "Vì lúa bị sâu bệnh",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết quá lạnh",
+        "correct": false
+      },
+      {
+        "text": "Vì không có giống lúa tốt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đo mật độ xương bằng AI trong 30s",
+    "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
+    "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ứng dụng AI vào đo mật độ xương có lợi ích gì?",
+    "answers": [
+      {
+        "text": "Giúp giảm thời gian đo xuống 30 giây và tăng độ chính xác.",
+        "correct": true
+      },
+      {
+        "text": "Giúp bác sĩ làm việc ít hơn.",
+        "correct": false
+      },
+      {
+        "text": "Giúp bệnh nhân không phải đến bệnh viện.",
+        "correct": false
+      },
+      {
+        "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
     "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
     "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
@@ -2570,60 +2655,6 @@
       },
       {
         "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
-    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
-    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
-    "cat": "thoi-su",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
-    "answers": [
-      {
-        "text": "Do khô hạn khiến lúa chết",
-        "correct": true
-      },
-      {
-        "text": "Vì lúa bị sâu bệnh",
-        "correct": false
-      },
-      {
-        "text": "Do thời tiết quá lạnh",
-        "correct": false
-      },
-      {
-        "text": "Vì không có giống lúa tốt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đo mật độ xương bằng AI trong 30s",
-    "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
-    "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ứng dụng AI vào đo mật độ xương có lợi ích gì?",
-    "answers": [
-      {
-        "text": "Giúp giảm thời gian đo xuống 30 giây và tăng độ chính xác.",
-        "correct": true
-      },
-      {
-        "text": "Giúp bác sĩ làm việc ít hơn.",
-        "correct": false
-      },
-      {
-        "text": "Giúp bệnh nhân không phải đến bệnh viện.",
-        "correct": false
-      },
-      {
-        "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
         "correct": false
       }
     ]
@@ -3267,37 +3298,6 @@
     ]
   },
   {
-    "title": "Nha khoa Nhân tâm khai trương chi nhánh quận 7",
-    "content": "Nha khoa Nhân Tâm đã chính thức khai trương chi nhánh mới tại quận 7, TP HCM vào ngày 22/3/2025. Chi nhánh này được trang bị công nghệ hiện đại như hệ thống chụp CT Cone Beam 3D và kỹ thuật số trong chẩn đoán và điều trị. Nhân Tâm cũng triển khai nhiều ưu đãi hấp dẫn cho khách hàng trong dịp khai trương, bao gồm cơ hội trúng thưởng và quà tặng khi sử dụng dịch vụ.",
-    "link": "https://vnexpress.net/nha-khoa-nhan-tam-khai-truong-chi-nhanh-quan-7-4864246.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Nha khoa Nhân Tâm vừa khai trương chi nhánh ở đâu?",
-    "answers": [
-      {
-        "text": "Quận 7, TP HCM",
-        "correct": true
-      },
-      {
-        "text": "Quận 10, TP HCM",
-        "correct": false
-      },
-      {
-        "text": "Quận 1, TP HCM",
-        "correct": false
-      },
-      {
-        "text": "Quận 3, TP HCM",
-        "correct": false
-      },
-      {
-        "text": "Quận 5, TP HCM",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nguyên nhân chất lượng phôi kém khi thụ tinh ống nghiệm",
     "content": "Chất lượng phôi trong thụ tinh ống nghiệm bị ảnh hưởng bởi nhiều yếu tố như chất lượng trứng và tinh trùng, môi trường nuôi cấy và công nghệ. Phôi kém chất lượng thường có hình thái bất thường và tốc độ phát triển chậm, dẫn đến tỷ lệ làm tổ thấp. Đặc biệt, độ tuổi của người phụ nữ có thể gây suy giảm chất lượng trứng, cùng với các yếu tố môi trường và lối sống cũng tác động đến chất lượng phôi.",
     "link": "https://vnexpress.net/nguyen-nhan-chat-luong-phoi-kem-khi-thu-tinh-ong-nghiem-4864319.html",
@@ -3347,6 +3347,37 @@
       },
       {
         "text": "Ngày 23/3 tại TP HCM và Quảng Nam",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nha khoa Nhân tâm khai trương chi nhánh quận 7",
+    "content": "Nha khoa Nhân Tâm đã chính thức khai trương chi nhánh mới tại quận 7, TP HCM vào ngày 22/3/2025. Chi nhánh này được trang bị công nghệ hiện đại như hệ thống chụp CT Cone Beam 3D và kỹ thuật số trong chẩn đoán và điều trị. Nhân Tâm cũng triển khai nhiều ưu đãi hấp dẫn cho khách hàng trong dịp khai trương, bao gồm cơ hội trúng thưởng và quà tặng khi sử dụng dịch vụ.",
+    "link": "https://vnexpress.net/nha-khoa-nhan-tam-khai-truong-chi-nhanh-quan-7-4864246.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Nha khoa Nhân Tâm vừa khai trương chi nhánh ở đâu?",
+    "answers": [
+      {
+        "text": "Quận 7, TP HCM",
+        "correct": true
+      },
+      {
+        "text": "Quận 10, TP HCM",
+        "correct": false
+      },
+      {
+        "text": "Quận 1, TP HCM",
+        "correct": false
+      },
+      {
+        "text": "Quận 3, TP HCM",
+        "correct": false
+      },
+      {
+        "text": "Quận 5, TP HCM",
         "correct": false
       }
     ]
@@ -3669,6 +3700,33 @@
     ]
   },
   {
+    "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
+    "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
+    "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Gian hàng Việt Nam xanh tại Lễ hội Thanh niên TP.HCM có hoạt động gì hấp dẫn?",
+    "answers": [
+      {
+        "text": "Chơi game và làm khảo sát để nhận quà",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có trưng bày sản phẩm",
+        "correct": false
+      },
+      {
+        "text": "Không có hoạt động gì đặc biệt",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có diễn thuyết về môi trường",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cầu Ba Son rực rỡ nối các đô thị hiện đại hai bờ sông Sài Gòn",
     "content": "Cầu Ba Son, còn được gọi là cầu Thủ Thiêm 2, đã hoàn thành hệ thống chiếu sáng mỹ thuật vào đầu năm 2025, tạo nên một biểu tượng mới cho TP.HCM. Cầu không chỉ kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm mà còn là điểm nhấn trong không gian đô thị ven sông Sài Gòn, thu hút du khách và người dân. Hệ thống chiếu sáng hiện đại giúp cầu trở nên lung linh vào ban đêm và có khả năng thay đổi màu sắc theo các sự kiện đặc biệt, góp phần nâng cao trải nghiệm tham quan của người dân và du khách.",
     "link": "https://tuoitre.vn/cau-ba-son-ruc-ro-noi-cac-do-thi-hien-dai-hai-bo-song-sai-gon-20250320164603305.htm",
@@ -3718,33 +3776,6 @@
       },
       {
         "text": "Vì không muốn gây tranh cãi trong quần vợt.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
-    "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
-    "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Gian hàng Việt Nam xanh tại Lễ hội Thanh niên TP.HCM có hoạt động gì hấp dẫn?",
-    "answers": [
-      {
-        "text": "Chơi game và làm khảo sát để nhận quà",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có trưng bày sản phẩm",
-        "correct": false
-      },
-      {
-        "text": "Không có hoạt động gì đặc biệt",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có diễn thuyết về môi trường",
         "correct": false
       }
     ]
@@ -4529,37 +4560,6 @@
       },
       {
         "text": "Cải thiện thị lực",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Golfer Philippines vô địch Lexus Challenge 2025",
-    "content": "Aidric Chan, golfer đến từ Philippines, đã xuất sắc giành chiến thắng tại Lexus Challenge 2025 với tổng điểm -8 sau vòng cuối diễn ra vào chiều 21/3 tại Bà Rịa - Vũng Tàu. Chan ghi được -4 trong vòng cuối và vượt qua ba đối thủ cạnh tranh gần nhất, Juvic Pagunsan, Filip Lundell và Sam Broadhurst, để đứng đầu bảng. Với chiến thắng này, Chan nhận phần thưởng 15.750 USD từ tổng quỹ thưởng 90.000 USD của giải đấu.",
-    "link": "https://vnexpress.net/golfer-philippines-vo-dich-lexus-challenge-2025-4864236.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ai là golfer vô địch Lexus Challenge 2025?",
-    "answers": [
-      {
-        "text": "Aidric Chan",
-        "correct": true
-      },
-      {
-        "text": "Juvic Pagunsan",
-        "correct": false
-      },
-      {
-        "text": "Filip Lundell",
-        "correct": false
-      },
-      {
-        "text": "Sam Broadhurst",
-        "correct": false
-      },
-      {
-        "text": "Ahmad Baig",
         "correct": false
       }
     ]
